# ai-evals-course-2025

./: .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
01-braintrust-intro/: 01_generate_data.ipynb  02_tasks_and_evals.ipynb  how-good-eval-infra-works.ipynb
01-braintrust-intro/data/: dept_support_areas.json
02-hw_1_2/: 01_hw2_generate_initial_queries.ipynb  02_hw_2_initial_error_analysis.ipynb  error_analysis_j.json  failure_modes.json  failure_modes.md  trace_failure_modes.json
02-hw_1_2/data/: g5_recipe_queries.csv  g5_recipe_queries.jsonl
03-hw_3/: 01_hw_3_llm_judge_align.ipynb
03-hw_3/data/: labeled_traces_dataset.csv
04-hw_4/: 01_hw_4_rag.ipynb
04-hw_4/data/: bm25_index.pkl  processed_recipes_with_similarities.json
05-hw_5/: 01_hw_5_agent_error_analysis.ipynb  failure_transition_analysis_summary.md
annotation/traces/: trace_20250727_171846_398205.json  trace_20250727_172751_788412.json  trace_20250727_172852_249566.json  trace_20250727_175115_329167.json
backend/: main.py  query_rewrite_agent.py  retrieval.py  utils.py
course-hw_1/: README.md
